(lang dune 3.3)

(name bsmi_ocaml)

(generate_opam_files true)

(source
 (github infobsmi/bsmi_ocaml))

(authors "cnmade")

(maintainers "cnmade")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name bsmi_ocaml)
 (synopsis "Bsmi ocaml library")
 (description "A very useful tool collections")
 (depends ocaml dune)
 (tags
  (topics "tools" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
